--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
   <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-  <div class="container">
-    <div id="product-list"></div>
-    <div class="cart">
-        <h2>Cart</h2>
-  <ul>
-    <li>Product 1 <span class="quantity">x1</span></li>
-    <li>Product 3 <span class="quantity">x2</span></li>
-  </ul>
-  <p>Total: $50</p>
-    </div>
-  </div>
-  <script src="./js/script.js"></script>
-
+    <div class="container">
+        <div class="product-list">
+        </div>
+        <div class="cart">
+          <h2>Cart</h2>
+          <ul id="cart-items">
+          </ul>
+          <p>Total: $<span id="cart-total">0.00</span></p>
+        </div>
+      </div>
+    
+      <script src="./js/script.js"></script>
 </body>
 </html>
