--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <h2>Cart</h2>
           <ul id="cart-items">
           </ul>
-          <p>Total: $<span id="cart-total">0.00</span></p>
+          <p class="cart-total">Total: $<span id="cart-total">0.00</span></p>
         </div>
       </div>
     
