--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
   <title>Shopping Website</title>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
-<body>
-    <div class="container">
-        <div class="product-list">
-        </div>
-        <div class="cart">
-          <h2>Cart</h2>
-          <ul id="cart-items">
-          </ul>
-          <p class="cart-total">Total: $<span id="cart-total">0.00</span></p>
-        </div>
-      </div>
-    
-      <script src="./js/script.js"></script>
+<body class="body">
+  <div class="container">
+    <div class="product-list">
+    </div>
+    <div class="cart">
+      <h2>Cart</h2>
+      <ul id="cart-items"></ul>
+      <p class="cart-total">Total: <span id="cart-total">$0,00</span></p>
+      <button class="clear-cart-button" id="clear-cart">Clear Cart</button>
+    </div>
+  </div>
+  <script src="./js/script.js"></script>
 </body>
 </html>
